# speechcortex-sdk

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_refactor.py  test_sdk.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  security.yml
examples/file_streaming/: main.py
examples/microphone/: main.py
speechcortex/: __init__.py  client.py  errors.py  options.py
speechcortex/audio/: __init__.py
speechcortex/audio/microphone/: __init__.py  constants.py  errors.py  microphone.py
speechcortex/clients/: __init__.py
speechcortex/clients/transcribe/: __init__.py  enums.py
speechcortex/clients/transcribe/batch/: __init__.py  client.py  exceptions.py  options.py  response.py
speechcortex/clients/transcribe/realtime/: __init__.py  client.py  options.py  response.py
speechcortex/utils/: __init__.py
speechcortex/utils/verboselogs/: __init__.py
zeus/: __init__.py  client.py  errors.py  options.py
zeus/audio/: __init__.py
zeus/audio/microphone/: __init__.py  constants.py  errors.py  microphone.py
zeus/clients/: __init__.py
zeus/clients/transcribe/: __init__.py  enums.py
zeus/clients/transcribe/realtime/: __init__.py  client.py  options.py  response.py
zeus/utils/: __init__.py
zeus/utils/verboselogs/: __init__.py
